--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     tty: true
     working_dir: /src
+    command: /src/docker.sh
     volumes:
       - .:/src
 
