--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "All rights reserved for deployer.",
   "dependencies": {
     "artillery-core": "^2.0.3-0",
+    "artillery-plugin-influxdb": "^0.9.0",
     "csv-parse": "^1.1.7"
   }
 }
