Re-scructure files to move bash scripts to `/scripts` and loadtest scenarios scripts to `scenarios`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '3'
 services:
 
-  app:
+  loadtests:
     build:
       context: .
       dockerfile: Dockerfile
-    tty: true
     working_dir: /src
-    command: /src/docker.sh
+    command: init.sh
     volumes:
       - .:/src
     environment:
