--- a/scenarios/example/script.yml
+++ b/scenarios/example/script.yml
@@ -5,7 +5,7 @@
 # https://artillery.io/docs/
 config:
   # this hostname will be used as a prefix for each URI in the flow unless a complete URI is specified
-  target: "http://aws.amazon.com"
+  target: "https://www.google.com"
   phases:
     -
       duration: 5
