--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,5 @@
+## AWS authenticaiton (required)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=eu-west-1
+## serverless-artillery is hardcoded to use us-east-1 region
+AWS_DEFAULT_REGION=us-east-1
