Make `.env.dist` clearer

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,5 @@
-## AWS authenticaiton (required)
+## AWS authentication (required)
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-## serverless-artillery is hardcoded to use us-east-1 region
+## serverless-artillery is hard-coded to use us-east-1 region
 AWS_DEFAULT_REGION=us-east-1
