--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ service: serverless-artillery-zhibek
 provider: # Using Node JS v4.3 on AWS
   name: aws
   runtime: nodejs6.10
+  region: ${env:AWS_DEFAULT_REGION}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
